--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
 # This workflow uses actions that are not certified by GitHub.
@@ -10,36 +9,36 @@ name: Java with Maven & Node.js CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Backend - Build 
-      working-directory: uk-immigration-app-backend
-      run: mvn -B package 
+      - uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Frontend – Install 
-      working-directory: uk-immigration-app-frontend
-      run: npm install
-       
+      - name: Backend - Build & Test
+        working-directory: uk-immigration-app-backend
+        run: mvn -B package
 
- 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Frontend – Install
+        working-directory: uk-immigration-app-frontend
+        run: npm install
+
+      - name: Frontend - Test
+        working-directory: uk-immigration-app-frontend
+        run: npm run test
